--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Prerequisites
+.idea/
 *.d
 
 # Object files
@@ -50,3 +51,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+cmake-build-debug/
+CMakeLists.txt
